test/spec_vectors/unreached-invalid/fail/module_99.wat
(module (func $type-block-value-nested-return-void-vs-num (result i32) (block (block (return (i32.const 0))))))